[gd_scene load_steps=21 format=3 uid="uid://7hlcljb3ln85"]

[ext_resource type="Script" path="res://scripts/PlayerCar/Car.gd" id="1_p747h"]
[ext_resource type="Texture2D" uid="uid://cipeawua7ovce" path="res://Assets/PixelDot.png" id="2_vxoy6"]
[ext_resource type="Texture2D" uid="uid://0j3eya5axy8j" path="res://Assets/Imperial_2_export.png" id="3_ov63d"]
[ext_resource type="Texture2D" uid="uid://bbxfxsq62ijpg" path="res://Assets/rubber.png" id="4_ur454"]
[ext_resource type="Script" path="res://scripts/PlayerCar/Camera2D.gd" id="5_3hvns"]
[ext_resource type="Script" path="res://addons/trail_2d/trail_2d.gd" id="5_wa8uj"]
[ext_resource type="Script" path="res://scripts/PlayerCar/TiresRenderTexture.gd" id="6_ahir4"]
[ext_resource type="Script" path="res://addons/easy_velocity_vector_display/vectordisplay2D.gd" id="8_g4hpb"]

[sub_resource type="Gradient" id="Gradient_j7a4u"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.113695)
colors = PackedColorArray(0.376471, 0.231373, 0.227451, 1, 0.631373, 0.623529, 0.486275, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_4rf21"]
gradient = SubResource("Gradient_j7a4u")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_6f27k"]
lifetime_randomness = 0.13
emission_shape = 1
emission_sphere_radius = 9.69
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
spread = 15.68
gravity = Vector3(0, 0, -10)
initial_velocity_min = 95.02
initial_velocity_max = 113.12
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
color_initial_ramp = SubResource("GradientTexture1D_4rf21")

[sub_resource type="Gradient" id="Gradient_je0gx"]
offsets = PackedFloat32Array(0, 0.788114, 1)
colors = PackedColorArray(0.45, 0.2484, 0.072, 1, 0.282538, 0.20754, 0.114062, 0.937255, 0.53, 0.417463, 0.2703, 0.635294)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_3w82n"]
gradient = SubResource("Gradient_je0gx")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_1qh8f"]
emission_shape = 2
emission_sphere_radius = 1.2
particle_flag_align_y = true
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
spread = 13.23
gravity = Vector3(0, 0, 0)
initial_velocity_min = 85.97
initial_velocity_max = 457.01
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.5
scale_max = 0.5
color_ramp = SubResource("GradientTexture1D_3w82n")
turbulence_noise_speed = Vector3(0.7, 0.7, 0.7)

[sub_resource type="Gradient" id="Gradient_ct2hs"]
colors = PackedColorArray(0.466667, 0.360784, 0.309804, 1, 0, 0, 0, 0)

[sub_resource type="CapsuleShape2D" id="6"]
radius = 13.0
height = 26.0001

[sub_resource type="Gradient" id="Gradient_uo26t"]
offsets = PackedFloat32Array(0, 0.604423)
colors = PackedColorArray(0, 0, 0, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_i4yvk"]
gradient = SubResource("Gradient_uo26t")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Animation" id="Animation_syeil"]
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_ov63d")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/body:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot/body:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pivot/body:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Pivot/body:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kognf"]
_data = {
"default": SubResource("Animation_syeil")
}

[node name="car" type="CharacterBody2D" groups=["Player"]]
z_index = 5
texture_filter = 1
collision_layer = 3
collision_mask = 3
script = ExtResource("1_p747h")

[node name="Fumes" type="GPUParticles2D" parent="."]
z_index = -1
position = Vector2(-18.3506, 0.0362377)
emitting = false
amount = 200
process_material = SubResource("ParticleProcessMaterial_6f27k")
texture = ExtResource("2_vxoy6")
fixed_fps = 60

[node name="TerrainDusts" type="GPUParticles2D" parent="."]
visible = false
emitting = false
amount = 500
process_material = SubResource("ParticleProcessMaterial_1qh8f")
texture = ExtResource("2_vxoy6")
fixed_fps = 60
visibility_rect = Rect2(-338.012, -237.978, 340.005, 470.528)

[node name="Pivot" type="Marker2D" parent="."]

[node name="body" type="Sprite2D" parent="Pivot"]
top_level = true
texture_filter = 1
texture = ExtResource("3_ov63d")
hframes = 4
vframes = 4
frame = 14
region_rect = Rect2(-0.154861, -23.5, 88.1549, 43.5655)
metadata/_aseprite_wizard_config_ = {
"layer": "",
"o_ex_p": "",
"o_folder": "res://Assets",
"o_name": "",
"only_visible": false,
"op_exp": false,
"player": "AnimationPlayer",
"source": "res://Assets/Imperial_2_export.ase"
}

[node name="rubber_right" type="Sprite2D" parent="Pivot"]
z_index = -1
position = Vector2(-14, 9)
texture = ExtResource("4_ur454")

[node name="Trail2D" type="Line2D" parent="Pivot/rubber_right"]
texture_filter = 1
gradient = SubResource("Gradient_ct2hs")
begin_cap_mode = 2
end_cap_mode = 2
script = ExtResource("5_wa8uj")
length = 100

[node name="rubber_left" type="Sprite2D" parent="Pivot"]
z_index = -1
position = Vector2(-14, -9)
texture = ExtResource("4_ur454")

[node name="Trail2D" type="Line2D" parent="Pivot/rubber_left"]
texture_filter = 1
gradient = SubResource("Gradient_ct2hs")
begin_cap_mode = 2
end_cap_mode = 2
script = ExtResource("5_wa8uj")
length = 100

[node name="pivot_right" type="Marker2D" parent="Pivot"]
position = Vector2(14, 8)

[node name="rubber" type="Sprite2D" parent="Pivot/pivot_right"]
z_index = -1
texture = ExtResource("4_ur454")

[node name="Trail2D" type="Line2D" parent="Pivot/pivot_right"]
texture_filter = 1
gradient = SubResource("Gradient_ct2hs")
begin_cap_mode = 2
end_cap_mode = 2
script = ExtResource("5_wa8uj")
length = 100

[node name="pivot_left" type="Marker2D" parent="Pivot"]
position = Vector2(14, -8)

[node name="rubber" type="Sprite2D" parent="Pivot/pivot_left"]
z_index = -1
texture = ExtResource("4_ur454")

[node name="Trail2D" type="Line2D" parent="Pivot/pivot_left"]
texture_filter = 1
gradient = SubResource("Gradient_ct2hs")
begin_cap_mode = 2
end_cap_mode = 2
script = ExtResource("5_wa8uj")
length = 100

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Pivot"]
remote_path = NodePath("../body")
update_rotation = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = -1
rotation = 1.5708
shape = SubResource("6")

[node name="Camera2D" type="Camera2D" parent="."]
drag_left_margin = 0.1
drag_top_margin = 0.1
drag_right_margin = 0.1
drag_bottom_margin = 0.1
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource("5_3hvns")

[node name="Engine" type="AudioStreamPlayer" parent="."]
volume_db = -10.0
autoplay = true

[node name="Tires" type="AudioStreamPlayer" parent="."]

[node name="Thud" type="AudioStreamPlayer" parent="."]

[node name="TiresRenderTexture" type="SubViewport" parent="."]
transparent_bg = true
canvas_item_default_texture_filter = 0
render_target_clear_mode = 2
render_target_update_mode = 1
script = ExtResource("6_ahir4")

[node name="brush_rubber_right" type="Sprite2D" parent="TiresRenderTexture"]
texture_filter = 1
scale = Vector2(0.3, 0.3)
texture = SubResource("GradientTexture2D_i4yvk")

[node name="brush_rubber_left" type="Sprite2D" parent="TiresRenderTexture"]
texture_filter = 1
scale = Vector2(0.3, 0.3)
texture = SubResource("GradientTexture2D_i4yvk")

[node name="brush_pivot_left" type="Sprite2D" parent="TiresRenderTexture"]
texture_filter = 1
scale = Vector2(0.3, 0.3)
texture = SubResource("GradientTexture2D_i4yvk")

[node name="brush_pivot_right" type="Sprite2D" parent="TiresRenderTexture"]
texture_filter = 1
scale = Vector2(0.3, 0.3)
texture = SubResource("GradientTexture2D_i4yvk")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kognf")
}

[node name="VectorDisplay2D" type="Node2D" parent="."]
script = ExtResource("8_g4hpb")
target = NodePath("..")
target_property = "forward"
vector_scale = 1000.0
